Removed medizen, added savor 1, updated permalink structure

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ url: "https://tobias-fyi.github.io" # the base hostname & protocol for your site
 #
 baseurl: "/fyi-pages" # the subpath of your site, e.g. "/blog".
 
+permalink: /:categories/:title
+
 # Github and twitter are optional:
 minima:
   social_links:
